                         CHANGES version 3.2

              This file summarizes changes made since 1.0

Version 3.2
-----------
* New: Support prefetch rows for MySQL and Oracle. Postgres, by default
  retrieve the result of a query at once, but can be made to limit the
  size of the Result Set by declaring a cursor and use FETCH in SQL.
  SQLite is a client side database and has no concept of prefetch.
  Thanks to jianlinlong (abc100m) for the suggestion and pull request

Version 3.1
-----------
* New: Support Literal IPv6 Addresses in URL, RFC2732. You can now
  use an IPv6 address as host in URL as long as it is enclosed in
  brackets, e.g. mysql://[2001:db8:85a3::8a2e:370:7334]:3306/test
  Requires that linked database libs supports IPv6. MySQL 5.x, 
  Postgres 9.x and Oracle 11.x or later versions should be fine.
* New: Honour timezone information if provided with date-time column
  values. Previous version assumed date-time information to be in UTC
  (which is the usual case).
* Fixed: #7 Removed onstop handler which called third-party database
  libraries shutdown method. This could cause a problem for MySQL and
  SQLite if more than one Connection Pool was used as the onstop handler
  was called in ConnectionPool_stop() and thereby would render other
  live Connection Pools invalid as the underlying library was shutdown.
* Fixed: #8 Do not remove a trailing SQL termination charachter ';' from
  the SQL statement.

Version 3.0
-----------
* New: Methods for retrieving Date, Time, DateTime and TimeStamp column
  values from a ResultSet. PreparedStatement_setTimestamp for setting
  Unix timestamp.
* New: ResultSet_isnull, can be used to explicit test if a column
  value in a Result Set is SQL null. A Result Set already returns
  the NULL pointer for string and blob types and 0 for primitive data
  types if column value is SQL null, but to differ between SQL null and 
  the value NULL or 0, this method can be used.