@@ -284,9 +284,11 @@ void ConnectionPool_start(T P) {
                 P->stopped = false;
                 if (! P->filled) {
                         P->filled = _fillPool(P);
-                        if (P->filled && P->doSweep) {
-                                DEBUG("Starting Database reaper thread\n");
-                                Thread_create(P->reaper, _doSweep, P);
+                        if (P->filled) {
+                                if (P->doSweep) {
+                                        DEBUG("Starting Database reaper thread\n");
+                                        Thread_create(P->reaper, _doSweep, P);
+                                }
                         }
                 }
         }
@@ -325,10 +327,12 @@ Connection_T ConnectionPool_getConnection(T P) {
                 int size = Vector_size(P->pool);
                 for (int i = 0; i < size; i++) {
                         con = Vector_get(P->pool, i);
-                        if (Connection_isAvailable(con) && Connection_ping(con)) {
-                                Connection_setAvailable(con, false);
-                                goto done;
-                        } 
+                        if (Connection_isAvailable(con)) {
+                                if (Connection_ping(con)) {
+                                        Connection_setAvailable(con, false);
+                                        goto done;
+                                }
+                        }
                 }
                 con = NULL;
                 if (size < P->maxConnections) {
